k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docsicecream-frontend
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: docsicecream-frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: docsicecream-frontend
    spec:
      containers:
      - image: jalgraves/docsicecream_frontend:latest
        imagePullPolicy: Always
        name: docsicecream-frontend
        ports:
        - containerPort: 3034
          name: tcp-frontend
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        tty: true
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
